--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,8 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+<div class="container">  
+  <div class="row">
   <% if user_signed_in? %>
     <%= link_to "プロフィール変更", edit_user_registration_path, :class => "btn btn-success btn-xs" %> 
     <%= link_to "ログアウト", destroy_user_session_path, method: :delete, :class => "btn btn-danger btn-xs" %>
@@ -23,7 +25,9 @@
     <p class="alert alert-danger"><%= alert %></p>
   <% end %>
     
-<%= yield %>
+  <%= yield %>
 
+  </div>
+</idv>
 </body>
 </html>
