--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
         </p>
           <% if user_signed_in? %>
         <p>
+            <%= link_to "ホーム", root_path, :class => "btn btn-default" %>
             <%= link_to "プロフィール変更", edit_user_registration_path, :class => "btn btn-success" %> 
             <%= link_to "ログアウト", destroy_user_session_path, method: :delete, :class => "btn btn-danger" %>
             ログイン中: <%= current_user.email %>
@@ -33,6 +34,8 @@
         <% if alert != nil %>  
         <p class="alert alert-danger"><%= alert %></p>
         <% end %>
+
+        <hr>
         
         <%= yield %>
 
