--- a/app/views/images/edit.html.erb
+++ b/app/views/images/edit.html.erb
@@ -9,11 +9,15 @@
       <%= f.text_field :title, :class => "form-control", :placeholder => "タイトル" %>
     </div>
     <div class="form-group">
+      <%= f.label "コメント" %>
+      <%= f.text_field :comment, :class => "form-control", :placeholder => "コメント" %>
+    </div>
+    <div class="form-group">
       <%= f.label "画像" %>
       <%= f.file_field :file, accept: "image/jpeg" %>
     </div>
     <div class="form-group">
-      <%= f.submit :value => "投稿", :class => "btn btn-primary" %>
+      <%= f.submit :value => "変更", :class => "btn btn-primary" %>
     </div>
     <% end %>
   </div>
