--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,9 @@
         </p>
           <% if user_signed_in? %>
         <p>
-            <%= link_to "ホーム", root_path, :class => "btn btn-default" %>
+            <%= link_to root_path, :class => "btn btn-default" do %>
+              <span class="glyphicon glyphicon-home"></span>
+            <% end %>
             <%= link_to "マイページ", home_show_path, :class => "btn btn-success" %> 
             <%= link_to "プロフィール変更", edit_user_registration_path, :class => "btn btn-warning" %> 
             <%= link_to "ログアウト", destroy_user_session_path, method: :delete, :class => "btn btn-danger" %>
