--- a/app/views/images/edit.html.erb
+++ b/app/views/images/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="panel panel-default devise-bs">
   <div class="panel-heading">
-    <h4>編集<h4>
+    <h4>画像内容の編集<h4>
   </div>
   <div class="panel-body">
     <%= form_for @image do |f| %>
@@ -11,10 +11,6 @@
     <div class="form-group">
       <%= f.label "コメント" %>
       <%= f.text_field :comment, :class => "form-control", :placeholder => "コメント" %>
-    </div>
-    <div class="form-group">
-      <%= f.label "画像" %>
-      <%= f.file_field :file, accept: "image/jpeg" %>
     </div>
     <div class="form-group">
       <%= f.submit :value => "変更", :class => "btn btn-primary" %>
