--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
         </p>
           <% else %>
         <p>
-            <%= link_to "サインイン", new_user_registration_path, :class => "btn btn-primary" %> 
+            <%= link_to "アカウントの新規登録", new_user_registration_path, :class => "btn btn-primary" %> 
             <%= link_to "ログイン", new_user_session_path, :class => "btn btn-success" %>
         </p>
           <% end %>
