機微な表示変更

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,8 +33,12 @@
         </p>
           <% else %>
         <p>
-            <%= link_to "アカウントの新規登録", new_user_registration_path, :class => "btn btn-primary" %> 
-            <%= link_to "ログイン", new_user_session_path, :class => "btn btn-success" %>
+          <%= link_to new_user_registration_path, :class => "btn btn-primary" do %>
+            <span class="glyphicon glyphicon-check"></span>新規登録
+          <% end %>
+          <%= link_to new_user_session_path, :class => "btn btn-success" do %>
+            <span class="glyphicon glyphicon-log-in"></span>ログイン
+          <% end %>
         </p>
           <% end %>
 
