--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width">
   </head>
   <body>
-    <div class="container">  
+    <div class="container-fruid">  
       <div class="col-xs-12">
         <p>
           <h1>illstack</h1>
