--- a/app/views/images/new.html.erb
+++ b/app/views/images/new.html.erb
@@ -14,7 +14,7 @@
     </div>
     <div class="form-group">
       <%= f.label "画像" %>
-      <%= f.file_field :file, accept: "image/jpeg" %>
+      <%= f.file_field :file, accept: "image/*" %>
     </div>
     <div class="form-group">
       <%= f.submit :value => "投稿", :class => "btn btn-primary" %>
